# deepdrive_ai

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  requirements.txt
src/deepdrive_ai/: README.md
src/deepdrive_ai/deepdrive_ai/: package.xml  setup.cfg  setup.py
src/deepdrive_ai/deepdrive_ai/deepdrive_ai/: chat_bot_node.py  langchain_test.py
src/deepdrive_ai/deepdrive_ai/deepdrive_ai/states/: __init__.py  listening_fsm.py  llama_state.py  speak_state.py
src/deepdrive_ai/deepdrive_ai_bringup/: CMakeLists.txt  package.xml
src/deepdrive_ai/deepdrive_ai_bringup/launch/: chatbot.launch.py  llm.hermes-2.launch.py  llm.kappa-3.launch.py  llm.llama3-dolphin.launch.py  llm.llama3.launch.py  llm.mixtral-dolphin.launch.py  llm.phi-3-dolphin.launch.py  llm.phi-3.launch.py  llm.starling.launch.py  lvm.llava.launch.py  tts.launch.py  whisper.launch.py
src/deepdrive_voice_bringup/: CMakeLists.txt  package.xml
src/deepdrive_voice_bringup/launch/: base.launch.py  chatbot.launch.py  gorilla.launch.py  hermes.launch.py  llama3.launch.py  llava.launch.py  marcoroni.launch.py  phi-2.launch.py  phi-3.launch.py  stablelm.launch.py  whisper.launch.py
